--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,10 @@
-spring.application.name=ex-spring-boot
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.enabled=true
-
-# ?? ID. PW
-spring.security.user.name=admin
-spring.security.user.password=admin
-
-
-## [?? ??]
-
-# ?? ?? ????
-server.servlet.session.timeout=30m
-
-# ???? ??
-server.servlet.session.cookie.name=MYSESSIONID
-
-server.servlet.session.cookie.secure=true
-server.servlet.session.cookie.http-only=false
-server.servlet.session.cookie.max-age=-1
-
-server.servlet.session.cookie.same-site=strict
+jwt.secret=your-very-secret-key-that-is-long-enough-to-be-secure
+jwt.expiration=86400000
